# xlerobot-research

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backlog_item.yml
.github/workflows/: ci.yml
docs/development/: launch_inventory.md  package_inventory.md  setup.md
docs/experiments/: replication_bundle_template.md
docs/project/: backlog.md
docs/roadmap/: v0.2_developer_velocity.md
docs/simulation/: fake_hardware.md
examples/run_cards/: fake_one_arm_smoke.yaml
ros2_ws/src/: README.md
ros2_ws/src/xle_agent_interfaces/: package.xml  setup.cfg  setup.py
ros2_ws/src/xle_benchmarks/: package.xml  setup.cfg  setup.py
ros2_ws/src/xle_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/xle_bringup/config/: fake_hardware.yaml
ros2_ws/src/xle_bringup/launch/: fake_one_arm.launch.py  real_one_arm_left.launch.py  view_fake_arm.launch.py  view_real_arm.launch.py
ros2_ws/src/xle_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/xle_description/launch/: view_robot.launch.py
ros2_ws/src/xle_description/rviz/: xlerobot.rviz
ros2_ws/src/xle_description/urdf/: xlerobot.urdf  xlerobot_0_4_0_vendor.urdf
ros2_ws/src/xle_fake_hardware/: package.xml  setup.cfg  setup.py
ros2_ws/src/xle_fake_hardware/xle_fake_hardware/: fake_sts3215_node.py
ros2_ws/src/xle_hardware/: package.xml  setup.cfg  setup.py
ros2_ws/src/xle_hardware/xle_hardware/: _sdk.py  assign_bus1_ids.py  bus1_layout.py  bus1_sts3215_node.py  calibrate_bus1.py  capture_pose.py  goto_pose.py  harness_events.py  joint_trajectory_guard_node.py  record_left_arm_run.py  scan_bus1.py  trajectory_guard.py  wiggle_motor.py
ros2_ws/src/xle_harness/: package.xml  setup.cfg  setup.py
ros2_ws/src/xle_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/xle_perception/config/: realsense_d435if.yaml
ros2_ws/src/xle_perception/launch/: realsense.launch.py
ros2_ws/src/xle_perception/xle_perception/: arm_ik.py  color_detector.py  color_object_detector_node.py  reach_to_pose_node.py
scripts/: check_launch_contracts.py  check_package_inventory.py  fake_launch_smoke.sh  publish_trajectory_fixture.py  validate_run_card.py
tests/: conftest.py  test_harness_events.py  test_launch_contracts.py  test_run_card_schema.py  test_trajectory_fixtures.py  test_trajectory_guard.py
tests/fixtures/trajectories/: invalid_left_arm_out_of_limit.yaml  invalid_left_arm_right_joint.yaml  valid_left_arm_small.yaml
