<?xml version="1.0"?>
<package format="3">
  <name>xle_agent_interfaces</name>
  <version>0.0.0</version>
  <description>Agent-facing interfaces for mediated access to the XLeRobot research stack.</description>
  <maintainer email="ranegray@users.noreply.github.com">Rane Gray</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
