<?xml version="1.0"?>
<package format="3">
  <name>xle_benchmarks</name>
  <version>0.0.0</version>
  <description>Benchmark task definitions and repeated-run protocols for XLeRobot research.</description>
  <maintainer email="ranegray@users.noreply.github.com">Rane Gray</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
