<?xml version="1.0"?>
<package format="3">
  <name>xle_bringup</name>
  <version>0.0.0</version>
  <description>Top-level launch files for the XLeRobot research stack.</description>
  <maintainer email="ranegray@users.noreply.github.com">Rane Gray</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xle_description</exec_depend>
  <exec_depend>xle_fake_hardware</exec_depend>
  <exec_depend>xle_hardware</exec_depend>
  <exec_depend>xle_harness</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
