<?xml version="1.0"?>
<package format="3">
  <name>xle_fake_hardware</name>
  <version>0.0.0</version>
  <description>Interface-compatible fake hardware for XLeRobot launch, harness, and bag testing.</description>
  <maintainer email="ranegray@users.noreply.github.com">Rane Gray</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
