<?xml version="1.0"?>
<package format="3">
  <name>xle_perception</name>
  <version>0.0.0</version>
  <description>Initial RealSense-backed perception for XLeRobot research tasks.</description>
  <maintainer email="ranegray@users.noreply.github.com">Rane Gray</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
