<?xml version="1.0"?>
<package format="3">
  <name>xle_perception</name>
  <version>0.0.0</version>
  <description>Initial RealSense-backed perception for XLeRobot research tasks.</description>
  <maintainer email="ranegray@users.noreply.github.com">Rane Gray</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-ikpy-pip</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>xle_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
